frontend/test/should_fail/basic_103.grg
using basic_model_002;

rule dummy {
  if { NOTTHERE1<=NOTTHERE2; }
  replace {
  }
}
